
        * TEST: Added tests for user-defined autodying functions
          changing behaviour depending upon context.  This was
          reported in http://perlmonks.org/?node_id=744246 .

        * BUGFIX: autodie was treating system() as a user-sub, not
          a built-in.  This could tigger extra (unnecessary) work
          inside autodie, but otherwise had no user impact.

        * DOCUMENTATION: The synopsis for autodie::exception::system
          previously implied system() was made autodying by default.
          This was not the case.  It must still be enabled with
          use autodie qw(system).

1.998 Sat Jan  3 11:19:53 AUSEDT 2009

        * BUILD: Removed Module::AutoInstall, which previously
          was loaded but not used, but currently doesn't actually
          do what we want.

        * TEST: We manually stringify $@ for one test in
          exception_class.t to avoid a bug involving overloaded
          classes containing apostrophies.

        * TEST: unlink.t and mkdir.t avoid changing directories,
          which could cause spurious failures when @INC includes
          paths relative to the current working directory.

        * DOCUMENTATION: Spurious "used only once" messages are
          documented in Fatal's documentation (as well as autodie's).

        * TEST: truncate.t has been updated to avoid incorrect
          test failures on VMS machines.  Many thanks to Craig A
          Berry for the bug report and fix.  (RT #42110)

1.997 Thu Dec  4 15:14:00 AUSEDT 2008
        * TEST: Test::More 0.86 (and possibly 0.85) appears to
          dislike package names that contain the apostrophe
          character (these occur in some tests for Klingon
          localisation).  We now skip these tests on systems
          with Test::More >= 0.85 installed.

1.996 Thu Dec  4 09:07:39 AUSEDT 2008
        * FEATURE: Child classes can now provide an exception_class()
          method that returns the desired exception class, rather